--- a/IKitaplik.BlazorUI/Components/Layout/NavMenu.razor
+++ b/IKitaplik.BlazorUI/Components/Layout/NavMenu.razor
@@ -46,6 +46,10 @@
                     <MudIcon Icon="@Icons.Material.Filled.List" />
                     Öğrenci Listele
                 </MudNavLink>
+                <MudNavLink Href="/donations">
+                    <MudIcon Icon="@Icons.Material.Filled.Bookmarks" />
+                    Bağışlar Listele
+                </MudNavLink>
             </MudNavGroup>
             <MudNavGroup Title="Emanetler" Icon="@Icons.Material.Filled.ViewList">
                 <MudNavLink Href="/deposit/add">
