--- a/IKitaplik.BlazorUI/wwwroot/app.css
+++ b/IKitaplik.BlazorUI/wwwroot/app.css
@@ -20,6 +20,7 @@ a, .btn-link {
     padding-top: 1.1rem;
 }
 
+
 h1:focus {
     outline: none;
 }
@@ -57,4 +58,8 @@ h1:focus {
 
 .form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
     text-align: start;
+}
+
+#loading{
+    height:100vh!important;
 }
