--- a/IKitaplik.BlazorUI/Components/_Imports.razor
+++ b/IKitaplik.BlazorUI/Components/_Imports.razor
@@ -24,9 +24,11 @@
 @using IKitaplik.Entities.DTOs.DepositDTOs
 @using IKitaplik.Entities.DTOs.DonationDTOs
 @using IKitaplik.Entities.DTOs.WriterDTOs
+@using IKitaplik.Entities.Enums
 @using IKitaplik.BlazorUI.Helpers
 @using IKitaplik.Entities.DTOs
 @using IKitaplik.BlazorUI.Components.Components.Deposit
 @using Microsoft.AspNetCore.Authorization
 @using IKitaplik.Entities.Concrete
 @using IKitaplik.BlazorUI.Cosntant
+@using IKitaplik.BlazorUI.Components.Components.Images
